# swagger/swagger.yml
@@ -30,6 +30,10 @@ paths:
         description: Fields returned. e.g. col1,col2 ...
         type: string
       - in: query
+        name: exclude
+        description: Exclude. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
         name: sortby
         description: Sorted-by fields. e.g. col1,col2 ...
         type: string
@@ -272,6 +276,10 @@ paths:
         description: Filter. e.g. col1:v1,col2:v2 ...
         type: string
       - in: query
+        name: exclude
+        description: Exclude. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
         name: fields
         description: Fields returned. e.g. col1,col2 ...
         type: string
@@ -327,8 +335,8 @@ paths:
         "403":
           description: :id is not int
 definitions:
-  242.<nil>.0x140004b56f8:
-    title: "0x140004b56f8"
+  242.<nil>.0x140004cbbc0:
+    title: "0x140004cbbc0"
     type: object
   models.Notification_category:
     title: Notification_category
@@ -635,7 +643,7 @@ definitions:
     type: object
     properties:
       Notifications:
-        $ref: '#/definitions/242.<nil>.0x140004b56f8'
+        $ref: '#/definitions/242.<nil>.0x140004cbbc0'
       StatusCode:
         type: integer
         format: int64
